--- a/mysite/login/templates/login/login.html
+++ b/mysite/login/templates/login/login.html
@@ -1,20 +1,31 @@
-{% extends "login/base.html" %}
-{% block content %}
-<form action="" method="POST">
-    <div class="col-md-6 offset-md-3">
-        <div class="card">
-            <div class="card-body">
-                {{ form.non_field_errors }}
-                {% for field in form %}
-                    {{ field }}
-                    {{ field.errors }}
-                    <hr>
-                {% endfor %}
-                <button type="submit" class="btn btn-success btn-lg btn-block" >Login</button>
-                <input type="hidden" name="next" value="{{ next }}" />
-                {% csrf_token %}
-            </div>
-        </div>
-    </div>
-</form>
-{% endblock %}
+{% load render_bundle from webpack_loader %}
+<div id="app">
+  <v-container>
+    <v-layout row class="text-xs-center">
+      <v-flex xs3 style="background-image: url('http://cdn.wallpapersafari.com/7/86/gqiGH7.jpg')">
+        <v-card height="500px"></v-card>
+      </v-flex>
+      <v-flex xs4 class="grey lighten-4">
+        <v-container style="position: relative;top: 13%;" class="text-xs-center">
+          <v-card flat>
+            <v-card-title primary-title>
+              <h4>Login</h4>
+            </v-card-title>
+            <v-form>
+            <v-text-field prepend-icon="person" name="Username" label="Username"></v-text-field>
+            <v-text-field prepend-icon="lock" name="Password" label="Password" type="password"></v-text-field>
+            <v-card-actions>
+              <v-btn primary large block>Login</v-btn>
+            </v-card-actions>
+            </v-form>
+          </v-card>
+        </v-container>
+      </v-flex>
+    </v-layout>
+  </v-container>
+</div>
+
+<div id="app">
+    <app></app>
+</div>
+{% render_bundle 'app' %}
