--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,3 +1,4 @@
+{% load render_bundle from webpack_loader %}
 {% load static %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
@@ -11,3 +12,8 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+
+<div id="app">
+    <app></app>
+</div>
+{% render_bundle 'app' %}
