--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,6 +1,8 @@
 {% load render_bundle from webpack_loader %}
 {% load static %}
 
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 
 {% if latest_question_list %}
@@ -16,4 +18,4 @@
 <div id="app">
     <app></app>
 </div>
-{% render_bundle 'app' %}
+{% render_bundle 'main' %}
